# nson

./: Cargo.toml  EXAMPLES.md  LICENSE  QUICK_REFERENCE.md  README.md
examples/: array_macro.rs  basic_types.rs  encode.rs  iot_device.rs  main.rs  performance.rs  test.rs  to_bytes.rs
src/: array.rs  decode.rs  encode.rs  id.rs  io.rs  json.rs  lib.rs  macros.rs  map.rs  message.rs  message_id.rs  nson.rs  object.rs  spec.rs  value.rs
src/core/: array.rs  id.rs  macros.rs  map.rs  message.rs  message_id.rs  mod.rs  spec.rs  value.rs
src/embedded/: cursor.rs  decode.rs  encode.rs  mod.rs
src/serde/: decode.rs  encode.rs  mod.rs
src/serde_impl/: decode.rs  encode.rs
src/util/: hex.rs  md5.rs  mod.rs
test/: mod.rs
tests/: extended_types.rs  integration_test.rs
