[package]
name          = "nson"
version       = "0.14.0-rc1"
license       = "MIT"
authors       = ["danc <dangcheng@hotmail.com>"]
description   = "NSON is a lightweight data-interchange format like JSON or BSON"
documentation = "https://docs.rs/queen-io"
homepage      = "https://github.com/danclive/nson"
repository    = "https://github.com/danclive/nson"
readme        = "README.md"
keywords      = ["nson", "serialization", "encoding"]
categories    = ["encoding"]
edition       = "2018"
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
indexmap = { version = "2.2", default-features = false, features = ["serde"] }
hash32 = { version = "0.3", default-features = false, optional = true }
rand = { version = "0.8", default-features = false }
hex = { version = "0.4", default-features = false }
once_cell = { version = "1.19", default-features = false, optional = true }

serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_bytes = { version = "0.11", default-features = false, optional = true }

serde_json = { version = "1.0", default-features = false, features = ["preserve_order"], optional = true }
base64 = { version = "0.22", default-features = false, optional = true }

embedded-io = { version = "0.6", default-features = false, optional = true }

[features]
default = ["std"]
no_std = ["alloc", "serde", "json", "embedded"]

std = ["indexmap/std", "rand/std", "rand/std_rng", "hex/std", "once_cell/std",
  "serde/std", "serde_bytes/std", "serde_json?/std", "base64?/std"]
alloc = ["hex/alloc", "once_cell/alloc",
  "hash32", "serde?/alloc", "serde_bytes?/alloc", "serde_json?/alloc", "base64?/alloc",
  "embedded-io?/alloc"]
serde = ["dep:serde", "serde_bytes"]
json = ["serde_json", "base64"]
embedded = ["embedded-io"]
