[package]
name          = "nson"
version       = "0.14.0"
license       = "MIT"
authors       = ["danc <dangcheng@hotmail.com>"]
description   = "NSON is a lightweight data-interchange format like JSON or BSON"
documentation = "https://docs.rs/nson"
homepage      = "https://github.com/danclive/nson"
repository    = "https://github.com/danclive/nson"
readme        = "README.md"
keywords      = ["nson", "serialization", "encoding"]
categories    = ["encoding"]
edition       = "2024"
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
indexmap = { version = "2.12", default-features = false, features = ["serde"] }
hash32 = { version = "1.0", default-features = false, optional = true }
rand = { version = "0.9", default-features = false }
const-hex = { version = "1.17", features = ["core-error"], default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_bytes = { version = "0.11", default-features = false, optional = true }

serde_json = { version = "1.0", default-features = false, features = ["preserve_order"], optional = true }
base64 = { version = "0.22", default-features = false, optional = true }

[features]
default = ["std", "serde", "json"]

std = [
  "alloc",
  "indexmap/std",
  "rand/std",
  "rand/std_rng",
  "rand/thread_rng",
  "const-hex/std",
  "serde?/std",
  "serde_bytes?/std",
  "serde_json?/std",
  "base64?/std"
]

alloc = [
  "const-hex/alloc",
  "hash32",
  "serde?/alloc",
  "serde_bytes?/alloc",
  "serde_json?/alloc",
  "base64?/alloc",
]

serde = [
  "dep:serde",
  "serde_bytes"
]

json = [
  "serde",
  "serde_json",
  "base64"
]
